Fix: menu overflow bug

--- a/AssetsKit/Assets/less/Source/components/menu.less
+++ b/AssetsKit/Assets/less/Source/components/menu.less
@@ -19,7 +19,6 @@
     min-width: min-content !important;
     max-width: 80vw;
     max-height: 80vh;
-    overflow: auto;
 }
 
 
